<resources>
    <string name="app_name">MyKitchen</string>
    <string name="recipes">Рецепты</string>
    <string name="my_kichen">Моя кухня</string>
    <string name="my_recipes">Мои рецепты</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="add_device">Добавить прибор</string>
    <string name="device">Прибор</string>
    <string name="my_device">Мои приборы</string>
    <string name="my_products">Мои продукты</string>
    <string name="add_product">Добавить продукт</string>
    <string name="product">Продукт</string>
    <string name="delete">Удалить</string>
    <style name="norm">italic</style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>