<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/pink_norm"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_recipe"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:layout_marginTop="700dp"
        android:background="@drawable/my_border"
        android:gravity="center"
        android:text="@string/recipes"
        android:textColor="@color/grey_good"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btn_my_recipes"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:layout_marginTop="700dp"
        android:background="@drawable/my_border"
        android:gravity="center"
        android:text="@string/my_recipes"
        android:textColor="@color/grey_good"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/btn_my_kichen"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:background="@drawable/my_border"
        android:gravity="center"
        android:text="@string/my_kichen"
        android:textColor="@color/grey_good"
        android:textSize="18sp"
        android:textStyle="italic"/>



</LinearLayout>