<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    tools:context="fragment.AddProductFragment"
    android:background="@color/pink_norm">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/grey_good"
        android:background="@color/pink_light"
        android:padding="6dp"
        android:textStyle="italic" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="572dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textSize="26sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/grey_good"
            android:textStyle="italic"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Вес:"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:textColor="@color/grey_good"
            android:textStyle="italic"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/add_weight"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="148dp"
            android:layout_height="64dp"
            android:layout_gravity="center|bottom"
            android:layout_margin="12dp"
            android:background="@drawable/my_border"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/grey_good"
            android:textSize="22sp"
            android:textStyle="italic" />

    </LinearLayout>


</LinearLayout>